[package]
name = "pepe"
version = "0.1.0"
authors = ["thiolliere <guillaume.thiolliere@opmbx.org>"]

[dependencies]
vulkano = "0.7"
vulkano-shader-derive = "0.7"
vulkano-win = "0.7"
winit = "0.7"
fps_clock = "2"
nalgebra = "0.13"
ncollide = { git = "https://github.com/thiolliere/ncollide/", branch = "send_sync_master" }
nphysics3d = { git = "https://github.com/thiolliere/nphysics/", branch = "send_sync_master" }
specs = "0.9"
alga = "0.5"
rand = "0.3"
lazy_static = "0.2"
pathfinding = "0.2"
png = "0.10"
imgui = "0.0.15"
ron = "0.1"
serde_derive = "1.0"
serde = "1.0"
