[package]
name = "pepe"
version = "0.1.0"
authors = ["thiolliere <guillaume.thiolliere@opmbx.org>"]

[dependencies]
vulkano = "0.7"
vulkano-shader-derive = "0.7"
vulkano-win = "0.7"
winit = "0.7"
nalgebra = "0.13"
ncollide = { git = "https://github.com/thiolliere/ncollide/", branch = "send_sync_master" }
nphysics3d = { git = "https://github.com/thiolliere/nphysics/", branch = "send_sync_master" }
specs = "0.10"
alga = "0.5"
rand = "0.4"
lazy_static = "1"
pathfinding = "0.6"
png = "0.11"
imgui = "0.0.18"
ron = "0.2"
serde_derive = "1.0"
serde = "1.0"
shuffled-iter = "0.2"
wavefront_obj = "5"
typenum = "1"
generic-array = "0.8"
fps_counter = "1"
app_dirs = "1"
rodio = "0.6"
show_message = { git = "https://github.com/thiolliere/show_message/" }
