[package]
name = "hyperzen-training"
version = "0.1.0"
authors = ["thiolliere <guillaume.thiolliere@opmbx.org>"]

[features]
packed = [] # standalone executable

[dependencies]
vulkano = "0.9"
vulkano-shader-derive = "0.9"
vulkano-win = "0.9"
winit = { version = "0.14", features = ["icon_loading"] }
nalgebra = "0.13"
ncollide = { git = "https://github.com/thiolliere/ncollide/", branch = "send_sync_master" }
nphysics3d = { git = "https://github.com/thiolliere/nphysics/", branch = "send_sync_master" }
specs = "0.10"
alga = "0.5"
rand = "0.4"
lazy_static = "1"
pathfinding = "0.7"
png = "0.12"
imgui = "0.0.18"
ron = "0.2"
serde_derive = "1.0"
serde = "1.0"
shuffled-iter = "0.2"
wavefront_obj = "5"
typenum = "1"
generic-array = "0.8"
fps_counter = "1"
app_dirs2 = "2"
rodio = "0.7"
show_message = { git = "https://github.com/thiolliere/show_message/" }
palette = "0.4"
locale_config = "0.2"
fluent-locale = "0.3"

[replace]
"vulkano-win:0.9.0" = { git = "https://github.com/thiolliere/vulkano" }
"vulkano:0.9.0" = { git = "https://github.com/thiolliere/vulkano" }
"vulkano-shader-derive:0.9.0" = { git = "https://github.com/thiolliere/vulkano" }
